--- a/Sunshine/app/src/main/res/values/strings.xml
+++ b/Sunshine/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="pref_location_key" translatable="false">location</string>
 
     <!-- Default postal code for location preference -->
-    <string name="pref_location_default" translatable="false">Mountain View, CA 94043</string>
+    <string name="pref_location_default" translatable="false">Ha Noi</string>
 
     <!-- Label for the temperature units preference -->
     <string name="pref_units_label">Temperature Units</string>
@@ -130,7 +130,6 @@
     <string name="a11y_humidity">Humidity: <xliff:g id="humidity">%1$s</xliff:g></string>
     <string name="a11y_pressure">Barometric Pressure: <xliff:g id="pressure">%1$s</xliff:g></string>
     <string name="a11y_wind">Wind speed and direction: <xliff:g id="wind">%1$s</xliff:g></string>
-
 
 
     <!-- Used by NotificationUtils -->
