--- a/Sunshine/app/src/main/res/values/strings.xml
+++ b/Sunshine/app/src/main/res/values/strings.xml
@@ -34,11 +34,7 @@
     <string name="pref_enable_notifications_true">Enabled</string>
     <string name="pref_enable_notifications_false">Not Enabled</string>
     <string name="pref_last_notification">last_notification</string>
-    <string name="format_temperature">
-        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
-    </string>
 
-    <string name="wind_label">Wind</string>
     <!-- Wind in kph -->
     <string name="format_wind_kmh">
         <xliff:g id="speed">%1$1.0f</xliff:g> km/h
@@ -51,17 +47,9 @@
         <xliff:g id="direction">%2$s</xliff:g>
     </string>
 
-    <string name="pressure_label">Pressure</string>
     <!-- Pressure format -->
-    <string name="format_pressure">
-        <xliff:g id="pressure">%1.0f</xliff:g> hPa
-    </string>
 
-    <string name="humidity_label">Humidity</string>
     <!-- Humidity format -->
-    <string name="format_humidity">
-        <xliff:g id="humidity">%1.0f</xliff:g> %%
-    </string>
 
     <!-- Weather Conditions (From OpenWeatherMap) -->
     <string name="condition_2xx">Storm</string>
@@ -73,8 +61,6 @@
     <string name="condition_504">Extreme Rain</string>
     <string name="condition_511">Freezing Rain</string>
     <string name="condition_520">Light Shower</string>
-    <string name="condition_521">Shower</string>
-    <string name="condition_522">Heavy Shower</string>
     <string name="condition_531">Ragged Shower</string>
     <string name="condition_600">Light Snow</string>
     <string name="condition_601">Snow</string>
@@ -123,14 +109,6 @@
 
     <string name="condition_unknown">Unknown (<xliff:g id="conditionId">%1$d</xliff:g>)</string>
 
-    <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
-    <string name="a11y_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
-    <string name="a11y_high_temp">High: <xliff:g id="high">%1$s</xliff:g></string>
-    <string name="a11y_low_temp">Low: <xliff:g id="low">%1$s</xliff:g></string>
-    <string name="a11y_humidity">Humidity: <xliff:g id="humidity">%1$s</xliff:g></string>
-    <string name="a11y_pressure">Barometric Pressure: <xliff:g id="pressure">%1$s</xliff:g></string>
-    <string name="a11y_wind">Wind speed and direction: <xliff:g id="wind">%1$s</xliff:g></string>
-
 
     <!-- Used by NotificationUtils -->
 
@@ -139,9 +117,23 @@
 
     <!-- For labelling tomorrow's forecast -->
     <string name="tomorrow">Tomorrow</string>
-    <string name="format_notification">
-        Forecast:<xliff:g id="condition">%1$s</xliff:g> -
-        High:<xliff:g id="high">%2$s</xliff:g>
-        Low:<xliff:g id="low">%3$s</xliff:g>
-    </string>
+    <string name="icon_small">Icon_Small</string>
+    <string name="icon_large">Icon_Large</string>
+    <string name="settings">Settings</string>
+    <string name="map_location">Map Location</string>
+    <string name="share">Share</string>
+    <string name="setting">Setting</string>
+    <string name="today_july_1">Today, July 1</string>
+    <string name="saturday_september_24">Saturday, September 24</string>
+    <string name="sunshine">Sunshine</string>
+    <string name="clear">Clear</string>
+    <string name="_18">18</string>
+    <string name="sunny">Sunny</string>
+    <string name="rainy">Rainy</string>
+    <string name="humidity">Humidity</string>
+    <string name="humidityValue">38%</string>
+    <string name="pressure">Pressure</string>
+    <string name="PressureValue">995 hPa</string>
+    <string name="wind">Wind</string>
+    <string name="windValue">4km/h NW</string>
 </resources>
